Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-14268

mirror split does not increase layout generation properly

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Minor Minor
    • Lustre 2.15.0
    • None
    • None
    • 3
    • 9223372036854775807

      To reproduce the hang try:

      lfs setstripe -c1 -i0 /mnt/lustre/f0
      umount /mnt/lustre-mds1
      mount /dev/mapper/mds1_flakey /mnt/lustre-mds1 -t lustre
      lfs mirror extend -N -c1 -i1 /mnt/lustre/f0
      umount /mnt/lustre-mds1
      mount /dev/mapper/mds1_flakey /mnt/lustre-mds1 -t lustre
      lfs mirror split -d --mirror-id=1 /mnt/lustre/f0
      dd if=/dev/zero of=/mnt/lustre/f0 bs=1M count=1
      

      The layout generation does not increase in mirror split, and not set the flr state properly, so client does not get the updated layout and setattr loops sending write intent RPC while cannot get the latest layout.

            bobijam Zhenyu Xu
            bobijam Zhenyu Xu
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved: