lustre/lov/lov_object.c
@@ -1393,6 +1393,7 @@ static int lov_conf_set(const struct lu_env *env, struct cl_object *obj,
 	if ((lsm == NULL && lov->lo_lsm == NULL) ||
 	    ((lsm != NULL && lov->lo_lsm != NULL) &&
 	     (lov->lo_lsm->lsm_layout_gen == lsm->lsm_layout_gen) &&
+	     (lov->lo_lsm->lsm_flags == lsm->lsm_flags) &&
 	     (lov->lo_lsm->lsm_entries[0]->lsme_pattern ==
 	      lsm->lsm_entries[0]->lsme_pattern))) {
 		/* same version of layout */
